# microservice-coffeemesh

./: .gitignore  docker-compose.yml
api/: Dockerfile
api/src/: pyproject.toml
api/src/orders/: app.py
api/src/orders/api/: api.py  schemas.py
docs/: oas.yaml
dredd/: Dockerfile
dredd/src/: package-lock.json
mock-graphql-server/: Dockerfile
mock-service-kitchen/: Dockerfile
mock-service-kitchen/docs/: kitchen.yaml
mock-service-kitchen/src/: package.json
mock-service-payments/: Dockerfile
mock-service-payments/docs/: payments.yaml
mock-service-payments/src/: package-lock.json
schemathesis/: Dockerfile
schemathesis/src/: pyproject.toml
service-kitchen/: Dockerfile
service-kitchen/docs/: oas.yaml
service-kitchen/src/: app.py  config.py  pyproject.toml
service-kitchen/src/api/: api.py  schemas.py
service-order/: Dockerfile
service-order/docs/: oas.yaml
service-order/src/: Makefile  alembic.ini  app.py  pyproject.toml
service-order/src/api/: api.py
service-order/src/commands/: jwt_generator.py
service-order/src/migrations/: env.py
service-order/src/migrations/versions/: 38da0b7bb039_.py  9b37f9222b95_.py  a75caded853e_initial_migration.py  df092796111f_add_user_id_to_order_table.py  fa44e8ea7d7b_.py
service-order/src/orders/api/: api.py  schemas.py
service-order/src/repository/: models.py  orders_repository.py  unit_of_work.py
service-order/src/service/: exceptions.py  orders_domain.py  orders_service.py
service-order/src/web/: app.py
service-order/src/web/api/: api.py  auth.py
service-products/: Dockerfile
service-products/src/: pyproject.toml  server.py
service-products/src/web/: data.py  mutations.py  queries.py  schema.py  types.py
