[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Masaru Fukazawa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ariadne = "^0.23.0"
uvicorn = "^0.30.0"
black = "^24.4.2"
isort = "^5.13.2"
bandit = "^1.7.8"
flake8 = "^7.0.0"
graphene = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
